# orca-ext-utils

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  backends.md  vendoring.md
examples/: click_focused.py  grab_keyset.py
orca_ext_utils/: __init__.py  _backend.py  compositor_query.py  extension_settings.py  key_combo_helpers.py  keyboard_grab.py  mouse_input.py  notification.py  process_supervisor.py  screen_capture.py  screen_rect.py  text_to_braille.py  window_info.py
tests/: test_backend.py  test_compositor_query.py  test_extension_settings.py  test_key_combo_helpers.py  test_keyboard_grab.py  test_mouse_input.py  test_process_supervisor.py  test_screen_capture.py  test_screen_rect.py  test_text_to_braille.py
